Esperanto as a language of translation

--- a/esperanto.tex
+++ b/esperanto.tex
@@ -88,6 +88,10 @@ Liu admits that although Esperantists in China constitute an important part of t
 At present, there is no nationwide organization for Esperantists in China, only a handful of local Esperantist clubs.
 Liu estimates the number of proficient speakers in the whole country to be around 1000.
 
+According to Benczik (1979), the first translations of Chinese works into Esperanto appeared as early as 1913.
+In the early period of the translation activity of Chinese Esperantists, the most popular works to be translated had been works of poetry and philosophy.
+The most active period, he states, happened in the years following the end of the Chinese Civil War and the founding of the People's Republic of China in 1949.
+
 Nowadays, there are three news outlets in the People's Republic of China that publish in Esperanto, namely the website \textit{El Popola Ĉinio}\footnote{\url{http://www.espero.com.cn/}, retrieved March 24th, 2020.} (`From People's China'), China.org.cn\footnote{\url{http://esperanto.china.org.cn/}, retrieved March 24th, 2020.},
 and China Radio International\footnote{\url{http://esperanto.cri.cn/}, retrieved March 24th, 2020.}
 (Boltinsky 2016).
@@ -118,3 +122,22 @@ Nevertheless, in an interview with Jason Zesky (2009), she acknowledged the ease
   Arika Okrent: At the Esperanto conference I attended, more than I expected. I thought it would be a lot of play acting, like [in a singsong voice], ``Hello. How are you? I am fine.'' But they were speaking fluently, and with a little bit of study I could understand what was going on. % There was also a lot of Victorian rigmarole because Esperanto was a turn of the [20th] century phenomenon they have retained all these old rituals. They have a flag passing ceremony and the reading of greetings from various Esperanto clubs—even a show and piano recitals.%
 }
 
+\section{Esperanto as a language of translation} \label{esperanto_translations}
+Translations have been an important part of the Esperanto movement ever from its early beginnings.
+Zamenhof's first translation into Esperanto was \textit{The Battle of Life: A Love Story} by Charles Dickens (Esperanto: \textit{La Batalo de l' Vivo}), which had not been published in book form until 1910.
+His next translation was Shakespeare's \textit{Hamlet}, published in Esperanto under the title \textit{Hamleto. Reĝido de Danujo} (`Hamlet. Prince of Denmark').
+Both translations were indirect translations from German-language editions
+(Kökény and Bleier 1933: 1054).
+
+% The first published book written directly in Esperanto was Zamenhof's \textit{Foundation of Esperanto}.
+According to Benczik (1979), Esperanto is regarded by most of its users as a language best suited for translation.
+Firstly, unlike in the case of national languages, where native speakers of the language have an obvious advantage over L2 speakers, Esperanto is from the outset designed to be used as an L2 language.
+This implies that anyone can translate from his or her own native language into Esperanto, which minimizes the risk of any misinterpretation of the source text.
+Secondly, Esperanto is very flexible; unlike national languages, its expressions are not constrained by a centuries-long language history.
+Lastly, it is theoretically possible that Esperanto could become popular in the whole world, it is therefore sufficient to translate a work into Esperanto, a language that can by understood by a person of any nationality.
+Indirect translation of texts originally written in another national language into another national language is particularly common in Asia.
+
+In the case of ethnic languages, a substantial part, if not the majority, of all translated texts are not meant for publication, but are translations of letters, articles, documents or other texts for internal use by organizations or governments.
+However, due to the fact that no country uses Esperanto as its official language, there is no need for such translations, and the vast majority of translations from ethnic languages or vice versa are intended for publishing in print.
+Benczik's article (1979) predated the invention of the World Wide Web by more than a decade.
+Nowadays, it is conceivable that most translations from or into Esperanto end up being published on websites or as e-books.
