--- a/introduction.tex
+++ b/introduction.tex
@@ -4,7 +4,7 @@
 \section{Research topic and objectives}
 The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written by the Polish writer Eliza Orzeszkowa (1841-1910), as well as its translations into Esperanto and the indirect translation from Esperanto into Chinese.
 The goal of the research is to find the similarities and differences between all three versions. %, analyze the translation techniques used by the two translators.
-Through this process, it should be possible to determine whether any content has been distorted in the process of indirect translation from Esperanto into Chinese, and conversely, if Esperanto can reliably be used as an intermediate language.
+Through this process, it should be possible to determine whether any content has been distorted in the process of indirect translation from Esperanto into Chinese, and conversely, if Esperanto can reliably be used as a bridge language.
 
 Being himself a proponent of the Esperanto movement, the author hopes to prove the usefulness of Esperanto in the field of translation, and by extension, to promote the study and use of this language, if only in the academia.
 
@@ -25,6 +25,15 @@ The Chinese edition has long gone out of print, it is however available through 
 The edition available in the system is dated 1948 and was published by \textit{Guoji Wenhua Fuwu She} (國際文化服務社 \pinyin{Guójì Wénhuà Fúwù shè} `International Society for Cultural Services').
 The title page names three offices of the society, in Shanghai (上海 \toponim{Shànghǎi}), Beiping (北平 \toponim{Běipíng}, present-day Beijing 北京 \toponim{Běijīng}), and Nanjing (南京 \toponim{Nánjīng}), respectively.
 
+\section{Existing publications on the topic}
+Benczik (1979) published an article on the topic of translation from and into Esperanto in Asia.
+According to the article, the phenomenon of translation from Esperanto into national languages is particularly common in Asia.
+The article is a mere three pages long and is by no means an exhaustive analysis of the topic, therefore the author considers writing a dissertation on the use of Esperanto as a bridge language to be a justifiable effort.
+
+Ausloos (2008) performed a computer analysis of two English texts and their respective translations into Esperanto.
+His research is similar in that it compares works in a natural language to their Esperanto translations, it does not, however, deal with the use of Esperanto as a bridge language or with indirect translation.
+His methodology differs from the research proposed in this text in that it is performed automatically by a computer program rather than a human.
+
 \section{Research method and expected outcome}
 
 A comparative analysis of a single text translated into both Esperanto and through Esperanto into Chinese could help determine whether Esperanto can reliably be used as an intermediate language for the translation of literary texts.
@@ -32,7 +41,10 @@ A comparative analysis of a single text translated into both Esperanto and throu
 The author deems it safe to assume that the translator of the Esperanto edition, Ludwik Lejzer Zamenhof, possessed all means of creating a complete and faithful translation: having grown up in an area where Polish was the language of intelligentsia, he had a good command of the Polish language, a good understanding of the Polish culture, and decades of experience in writing.
 Being the creator of the Esperanto language, he knew his constructed language better than anyone else at his time.
 He had also met Eliza Orzeszkowa in person and had lived in the area where the plot of the novel was placed.
+
 At the same time, Esperanto is a simple and highly flexible language, with grammar and logic based on European languages, making it relatively easy to translate the Polish original into Esperanto with little to no loss of meaning and high degrees of equivalence.
+Benczik (1979) presents Esperanto as a language very well-suited for translations.
+His work is discussed in more detail in section \ref{esperanto_translations}.
 
 On the other hand, Chinese, especially in its written variant (書面語 \pinyin{shūmiànyǔ} `book language'), relies on entirely different patterns than European languages.
 This has to do with the history and development of the Chinese language.
