--- a/references.tex
+++ b/references.tex
@@ -4,6 +4,10 @@
 
 % \textit{1905 --- Kongresa programo.} 100-a Universala Kongreso de Esperanto. Retrieved March 25th, 2020, from \url{http://www.lve-esperanto.org/lille2015/eo/memoro/1905-kongresa-programo.htm}.
 
+Ausloos M. (2008). Equilibrium and dynamic methods when comparing an English text and its Esperanto translation. \textit{Physica A-statistical Mechanics and Its Applications - PHYSICA A.} 387. 6411-6420. 10.1016/j.physa.2008.07.016. 
+
+Benczik V. (1979). Esperanto Translation in Asia. \textit{Babel}. 25. 10.1075/babel.25.3.06ben. 
+
 Bachórz J. \textit{Eliza Orzeszkowa}. Virtual Library of Polish Literature. Retrieved March 7th, 2020, from \url{https://literat.ug.edu.pl/autors/orzeszk.htm}.
 
 Boltinsky D. (2016). \textit{Esperanto in China faces uncertain future.} Retrieved March 24th, 2020, from \url{http://www.china.org.cn/china/2016-07/26/content_38959660.htm}.
@@ -37,7 +41,7 @@ Orzeszkowa E. \textit{Marta}. Retrieved from \url{https://wolnelektury.pl/media/
 Orzeszko E. (1910). \textit{Marta}. L.L. Zamenhof (Trans.). Retrieved from \url{https://bertilow.com/literaturo/marta.html} on March 7th, 2020.
 % https://www.rulit.me/books/marta-read-366296-1.html
 
-Sevänen E. (2018). Modern Literature as a Form of Discourse and Knowledge of Society. \textit{Sociologias}, 20(48). doi:10.1590/15174522-020004803. Retrieved on March 7th, 2020.
+% Sevänen E. (2018). Modern Literature as a Form of Discourse and Knowledge of Society. \textit{Sociologias}, 20(48). doi:10.1590/15174522-020004803. Retrieved March 7th, 2020.
 
 Sikosek, Z. M. (2003). \textit{Esperanto sen mitoj.} Antwerp, Belgium: Flandra Esperanto-Ligo. 
 
