--- a/introduction.tex
+++ b/introduction.tex
@@ -65,6 +65,14 @@ Zhong Xianmin, who translated the novel \textit{Marta} did so based only on the 
 Due to these specifics of written Chinese, certain differences are to be expected between the Chinese translation and the Polish original.
 Should the Esperanto translation prove to be a faithful rendition of the Polish original, it follows that any substantial differences between the original and the Chinese translation have been introduced in Zhong Xianmin's work.
 
+\section{Structure of the thesis}
+In the first chapter of the thesis, the subject of research is introduced.
+The second chapter presents the auxilliary language Esperanto, describing its origin, development, and current state.
+The third chapter provides the presentation of the novel \textit{Marta} by Eliza Orzeszkowa and its historical and cultural background.
+In the fourth chapter, Zamenhof's Esperanto translation of the novel will be compared with the Polish original, to determine whether any meaning had been lost or distored in the translation process.
+The fifth chapter will provide a comparative analysis of the Chinese translation by Zhong Xianmin and its Esperanto source text to see how the translator dealt with fragments where equivalence could not be easily achieved.
+The sixth chapter will evaluate whether in the case of the novel \textit{Marta} Esperanto was suitable as a bridge language.
+
 \section{Historical background of the novel}
 
 In order to fully understand the works of Eliza Orzeszkowa, it is important to put her writings in their historical context.
