Include compilation time on every page

--- a/_preamble.tex
+++ b/_preamble.tex
@@ -3,7 +3,7 @@
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 \usepackage[compact]{titlesec}
 \usepackage[all]{nowidow}
-\usepackage{setspace,indentfirst,hyphenat,xeCJK,makeidx,sectsty,fancyhdr,emptypage}
+\usepackage{setspace,indentfirst,hyphenat,xeCJK,makeidx,sectsty,fancyhdr,emptypage,datetime}
 \PassOptionsToPackage{hyphens}{url}\usepackage{hyperref}
 \hypersetup{
   colorlinks = true,
@@ -12,6 +12,7 @@
   linkcolor = black
 }
 \usepackage{csquotes}
+\definecolor{CompilationTime}{HTML}{aaaaaa}
 \usepackage[top=2.5cm,left=3.5cm,right=2.5cm,bottom=2.5cm]{geometry}
 \setmainfont[Mapping=tex-text]{Minion Pro}
 \setsansfont[Scale=0.88]{Minion Pro}
@@ -30,6 +31,7 @@
 \fancyhead[LE]{\nouppercase\leftmark}
 \fancyhead[RO]{\nouppercase\rightmark}
 \fancyfoot[CE,CO]{\thepage}
+\fancyfoot[RO]{\footnotesize\color{CompilationTime} Compiled {\ddmmyyyydate\today} at \currenttime}
 \renewcommand{\headrulewidth}{0pt}
 \newcommand{\ibid}{ (\textit{Ibidem}).}
 \newcommand{\longquote}[1]{\quotespacing\blockquote{\itshape #1}\defspacing}
