--- a/introduction.tex
+++ b/introduction.tex
@@ -5,22 +5,19 @@
 The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written by the Polish writer Eliza Orzeszkowa (1841-1910), as well as its translations into Esperanto and the indirect translation from Esperanto into Chinese.
 The goal of the research is to find the similarities and differences between all three versions. %, analyze the translation techniques used by the two translators.
 Through this process, it should be possible to determine whether any content has been distorted in the process of indirect translation from Esperanto into Chinese, and conversely, if Esperanto can reliably be used as a bridge language.
-
-Being himself a proponent of the Esperanto movement, the author hopes to prove the usefulness of Esperanto in the field of translation, and by extension, to promote the study and use of this language, if only in the academia.
+This way, the author hopes to prove the usefulness of Esperanto in the field of translation, and by extension, to promote the study and use of this language.
 
 \section{Overview of literature and references}
-In the thesis, three editions of the novel \textit{Marta} are discussed, in three different languages: Polish, Esperanto, and Traditional Chinese.
-The novel was first published in Polish in 1873, in Esperanto in 1910, and in Chinese in 1930.
-Ludwik Zamenhof, the creator of Esperanto, % being fluent in Polish,
-translated the novel from the Polish original.
+In the thesis, three editions of the novel \textit{Marta} are discussed, in three different languages: Polish, Esperanto, and Chinese.
+The novel was first published in Polish in 1873.
+Ludwik Zamenhof, the creator of Esperanto, translated the novel from the Polish original into Esperanto, and it was first published in Esperanto in 1910.
 The Chinese version was translated in May 1928 by Zhong Xianmin (錘憲民 \nazwisko{Zhōng Xiànmín}%
 \footnote{All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. The romanizations of common terms are set in italic type, while proper names are set in regular font.}) %
-from Zamenhof's Esperanto translation.
-Zhong Xianmin's translation was first published in 1930 by the Shanghai Beixin Shuju publishing house (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú}) under the title \textit{Gu yan lei} (孤雁淚 \textit{Gū yàn lèi} `The Tears of a Lonely Wild Goose')
+from Zamenhof's Esperanto translation and first published in 1930 by \textit{Shanghai Beixin Shuju} (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú}), under the title \textit{Gu yan lei} (孤雁淚 \textit{Gū yàn lèi} `The Tears of a Lonely Wild Goose')
 (Kökény and Bleier 1933: 612; Orzeszko 1948).
 
-As of this writing, none of the translations is easily available in retail or libraries, therefore for research purposes, digitalised versions will be used.
-The Esperanto translation has been published to several websites of Esperanto associations and in general, it is very easy to find with a few keystrokes.
+As of this writing, none of the translations is easily available in retail or in libraries, therefore for research purposes, digitalised versions will be used.
+The Esperanto translation has been published to several websites of Esperanto associations and in general, it is relatively easy to obtain.
 The Chinese edition has long gone out of print, it is however available through the electronic library system of the National Taiwan Normal University.
 The edition available in the system is dated 1948 and was published by \textit{Guoji Wenhua Fuwu She} (國際文化服務社 \pinyin{Guójì Wénhuà Fúwù shè} `International Society for Cultural Services').
 The title page names three offices of the society, in Shanghai (上海 \toponim{Shànghǎi}), Beiping (北平 \toponim{Běipíng}, present-day Beijing 北京 \toponim{Běijīng}), and Nanjing (南京 \toponim{Nánjīng}), respectively.
